--- a/vendas.html
+++ b/vendas.html
@@ -7,7 +7,8 @@
     <title>Sites de Vendas</title>
 </head>
 <body>
-    <h1>Página Vendas!</h1>
+    <h1>Vendas!</h1>
     <a href="index.html">Voltar para página Home</a>
+    <p>Vendas = R$5.000,00</p>
 </body>
 </html>
